# crewai_table_of_content_creator

./: README.md  pyproject.toml
src/crewai_table_of_content_creator/: main.py
src/crewai_table_of_content_creator/crews/blog_crew/: blog_crew.py  toc_crew.py
src/crewai_table_of_content_creator/crews/blog_crew/config/: agents.yaml  tasks.yaml
src/crewai_table_of_content_creator/crews/poem_crew/: blog_crew.py  poem_crew.py  toc_crew.py
src/crewai_table_of_content_creator/crews/poem_crew/config/: agents.yaml  tasks.yaml
