[project]
name = "crewai_table_of_content_creator"
version = "0.1.0"
description = "crewai-table-of-content-creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_table_of_content_creator.main:kickoff"
plot = "crewai_table_of_content_creator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
